@@ -1,0 +1,352 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u65e5\u672c\u751f\u6d3b\u65b0\u624b\u5fc5\u770b\uff01\u5c08\u696d\u7d1a\u5225\u7684\u60c5\u5831\u5e6b\u4f60\u9806\u66a2\u904e\u6e21\uff0c\u544a\u5225\u6587\u5316\u9707\u64bc\u548c\u751f\u6d3b\u56f0\u64fe", "description": "\u65e5\u672c\u751f\u6d3b\u65b0\u624b\u5fc5\u770b\uff01\u5c08\u696d\u7d1a\u5225\u7684\u60c5\u5831\u5e6b\u4f60\u9806\u66a2\u904e\u6e21\uff0c\u544a\u5225\u6587\u5316\u9707\u64bc\u548c\u751f\u6d3b\u56f0\u64fe", "url": "https://www.famechos.me/news/\u65e5\u672c\u751f\u6d3b\u65b0\u624b\u5fc5\u770b\uff01\u5c08\u696d\u7d1a\u5225\u7684\u60c5\u5831\u5e6b\u4f60\u9806\u66a2\u904e\u6e21\uff0c\u544a\u5225\u6587\u5316\u9707\u64bc\u548c\u751f\u6d3b\u56f0\u64fe.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T09:29:27.883447+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾.html"/>
+<meta name="description" content="日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾。快速掌握日本生活的精髓，輕鬆適應新環境。">
+
+<meta name="keywords" content="日本生活, 新手指南, 文化震撼, 生活困擾, 專業級別, 情報, 過渡, 日本生活攻略">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾.html" />
+        <meta property="og:title" content="日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾" />
+        <meta property="og:description" content="日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾" />
+        <meta property="twitter:description" content="日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>搬到日本？有很多指南，但只有經驗才能提供專業級別的情報。無論你是在東京、鄉村還是在兩者之間，這些貼士都會幫助你順暢過渡。</p>
+<h2>步驟 1：申請本地電話號碼</h2>
+<p>當你抵達日本時，本地電話號碼就是你的金票。它對於日常生活至關重要，從設立銀行帳戶到購買傢俱（或食物！）送貨。幸運的是，你可以在抵達前就獲得一個。</p>
+<p>輕鬆的方法：在線訂購</p>
+<p>你可以在線訂購Mobal日本SIM卡，提供英語客戶支持，使得管理你的手機計劃變得容易。</p>
+<p>選擇合適的電話號碼供應商</p>
+<table>
+<tr>
+<th>供應商</th>
+<th>優點</th>
+<th>缺點</th>
+</tr>
+<tr>
+<td>Mobal</td>
+<td>英語客戶支持，容易管理</td>
+<td>價格可能較高</td>
+</tr>
+<tr>
+<td>日本主要供應商</td>
+<td>價格較低</td>
+<td>設立號碼可能耗時且複雜</td>
+</tr>
+</table>
+有用的資源<h2>2. 在當地市政廳/區政府登記</h2>
+<p>抵達日本後，需在兩周內前往當地區政府辦公室登記。請帶上護照和居留卡。這裡可以完成三件重要的事情。</p>
+<ol>
+<li>登記地址</li>
+<li>訂購個人編號</li>
+<li>安排健康保險</li>
+</ol>
+<p>登記地址時，填寫表格並交給工作人員即可。如果在大城市，可能會有英語說話者幫助；如果在小鎮，則可以使用翻譯應用程式。</p>
+<p>訂購個人編號後，約三周內會收到郵件憑證，以領取個人稅務編號卡。如果需要更快開始工作，可以申請臨時紙質副本。</p>
+<p>安排健康保險是非常重要的一步，請務必完成。</p>
+<h2>完成前最後一步：申請健康保險</h2>
+<p>如果你受僱於公司且享有公司福利，你將通過僱主被登記在公司的保險計劃中。否則，你將在市政廳被登記在國家健康保險計劃中。</p>
+<p>你的保險卡將通過郵件寄出。你也可以使用個人編號卡代替保險卡。</p>
+<p>請確保你的名字在每份文件上都與護照上的名字相同，以避免日後的麻煩。</p>
+<h2>3. 開設日本銀行帳戶</h2>
+<p>在日本眾多銀行中感到迷失？以下是一些外國人友好的銀行選擇：</p>
+<ul>
+<li>SBI新生銀行：為外國人提供順暢的服務。</li>
+<li>索尼銀行：科技先進，英語友好。</li>
+<li>郵貯銀行：簡單、低成本，具有易於使用的應用程序。它是初學者銀行帳戶的完美選擇，可以輕鬆收到第一份薪水。</li>
+</ul><h2>4. 連接公用事業和互聯網</h2>
+<p>接下來，讓我們把你的生活設施搞定。</p>
+<h3>電力</h3>
+<p>有些公寓已經預先選擇了供應商，而其他公寓則讓你自由選擇。不管怎樣，快速撥打電話即可設置一切。他們將檢查你的錶表，請求簽名，然後打開開關。</p>
+<h3>煤氣</h3>
+<p>請聯繫煤氣供應商，安排設置煤氣錶表和管道。他們將會指導你完成一切。</p>
+<h3>水費</h3>
+<p>你可以使用日本郵政的Pay應用程序來支付水費。只需掃描水費條碼，即可立即付款，節省你的時間和麻煩。</p>
+<h3>互聯網</h3>
+<p>請聯繫互聯網供應商，安排設置互聯網服務。他們將會指導你完成一切。</p>
+<h2>在日本生活必知的基本知識</h2>
+<p>搬到日本後，需要處理一些基本的生活設施，包括電力、水、Wi-Fi和賬單付款。以下是我的經驗和建議：</p>
+<h2>Power Supply</h2>
+<p>我發現選擇供應商並不困難，打電話給他們安排訪問後，他們就會幫你接通電力。</p>
+<h2>The Essence of Water</h2>
+<p>幸好，我的水供應已經開通，但我仍然需要聯繫當地的水務局設立我的帳戶，以便繼續使用。</p>
+<h2>Connecting to the Internet with Wi-Fi</h2>
+<p>我建議購物比較，以便快速上網。以下是一些互聯網供應商的選擇：</p>
+<ul>
+<li>NTT</li>
+<li>KDDI</li>
+<li>SoftBank</li>
+</ul>
+<h2>付款與賬單</h2>
+<p>我選擇自動銀行扣款，但也可以前往便利店進行現金付款。一些供應商允許直接從手機付款，例如通過SMS收到電費帳單，然後使用Mobal日本SIM卡的付款功能或類似的服務進行付款。</p>
+<h2>在日本生活必裝的5款實用應用程式</h2>
+<p>以下是一些我發現非常有用的應用程式：</p>
+<ol>
+<li>Google Maps</li>
+<li>Hyperdia</li>
+<li>Tabelog</li>
+<li>Japan Travel Bureau</li>
+<li>Mobal日本SIM卡</li>
+</ol>以下是處理好的文章：
+<h2>赴日前必备的实用贴士</h2>
+<p>在搬到日本之前，我希望我知道的一些竅門可以使我的日本生活更加容易。以下是一些方便的應用程式，可以幫助你更好地融入日本生活。</p>
+<h3>必備應用程式</h3>
+<ul>
+<li>LINE：日本最流行的通訊應用程式，連接朋友和商業伙伴的必備工具。</li>
+<li>Google Maps：在日本大部分地區都能正常工作，提供步行、騎行和駕駛方向以及公共交通信息。</li>
+<li>NAVITIME：一個日本特有的導航應用程式，提供詳細的公共交通信息，包括實時火車和巴士時間表。</li>
+<li>西瓜卡/PASMO卡：移動電子錢包，用於支付公共交通和便利店購物（如果你不想要實體卡）。 </li>
+<li>垃圾分類導引App：一個垃圾管理應用程式，幫助你理解垃圾分類規則並找到不同類型垃圾的收集點。</li>
+<li>NHK新聞網站簡易版：NHK新聞網站的簡化版本，文章使用簡單的日語——非常適合學習。</li>
+<li>安全提示：準備好應對災難是很重要的。這個政府應用程式提供實時的自然災害、緊急情況和安全信息的推送通知，支持英文（和其他語言）。 </li>
+<li>PayPay/樂天Pay：這些流行的移動支付應用程式，用於在商店和餐廳進行無現金支付。當你想要電子支付但尚未具備現金或信用卡的資格時，這是完美的選擇。你還可以賺取積分，用於未來的購買。</li>
+</ul>
+<h2>專為蘋果用戶的額外注意事項</h2>
+<p>抵達日本前，請先將App Store地區設定為日本。許多重要應用程式都受到地區限制！您需要完成或取消對Apple Music等應用程式的訂閱，並確保您的Apple Store餘額為零，才能更改地區。</p>
+<h2>第六步：購買傢俱</h2>
+<p>在日本購買傢俱時，我們建議您利用日本的傢俱巨頭，如宜得利（Nitori）和東京國際家居生活設計展（Tokyo Interior），購買適合日本公寓大小的商品。他們還提供送貨服務！</p>
+<h2>技巧：如何送貨和組裝</h2>
+<p>宜得利（Nitori）是您的最佳選擇，因為他們提供送貨、組裝和清理垃圾的服務，全部一次完成。宜家家居（IKEA）也提供組裝服務，但這是與送貨服務分開的，增加了額外的麻煩。</p>
+<h2>選擇二手：一個值得考慮的選擇</h2>
+<p>您可以找到一切所需的商品，包括便宜甚至免費的傢俱。</p>
+
+<p>資料來源：Tokyo Cheapo</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FDiCxTtGEt8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動.html">東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京10月瘋狂節慶！萬聖節前後超自然貓節、妖怪盂蘭盆舞等你來體驗.html">東京10月瘋狂節慶！萬聖節前後超自然貓節、妖怪盂蘭盆舞等你來體驗</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街.html">東京隱藏的藝妓世界：體驗傳統日本文化的秘密花街</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
