@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 05:32:06 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 09:29:44 +0800</lastBuildDate>
 
   <item>
   <title>東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動</title>
@@ -31,5 +31,11 @@
   <description>東京萬聖節新規澀谷和新宿呼籲民眾避免前往東京的澀谷和新宿地區再次呼籲民眾在萬聖節期間避免前往這兩個地區在過去的萬聖節慶祝活動中都遇到了大量遊客和垃圾問題現在決定...</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 05:32:06 +0800</pubDate>
+</item><item>
+  <title>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</title>
+  <link>https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾.html</link>
+  <description>搬到日本我們有專業級別的情報幫助你順暢過渡搬到日本有很多指南但只有經驗才能提供專業級別的情報無論你是在東京鄉村還是在兩者之間這些貼士都會幫助你順暢過渡1獲得本地...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 09:29:44 +0800</pubDate>
 </item></channel>
 </rss>
