@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 09:26:24 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 09:29:44 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -103,5 +103,11 @@
   <description>新裤子成員Hanni將出席國會審查作證韓國Kpop組合新裤子成員Hanni宣布她將出席即將舉行的國會審查分享自己在工作場所遭遇欺凌和排斥的經歷審查將於10月15日舉行Hanni在粉絲溝通應用程式Phoning上分享了她的決定表示我將獨自出席審查我這樣做是為了自己和粉絲她...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 09:26:24 +0800</pubDate>
+</item><item>
+  <title>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</title>
+  <link>https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾.html</link>
+  <description>搬到日本我們有專業級別的情報幫助你順暢過渡搬到日本有很多指南但只有經驗才能提供專業級別的情報無論你是在東京鄉村還是在兩者之間這些貼士都會幫助你順暢過渡1獲得本地...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 09:29:44 +0800</pubDate>
 </item></channel>
 </rss>
